src/App.css
.App {
  text-align: center;
  overflow-x: hidden;
}

.Column-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.Header-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  align-content: center;
  justify-content: space-evenly;
  font-size: 1rem;
  border-bottom: 1px solid lightgray;
}

.Header-container img {
  height: 70px;
  margin: 0.5rem;
}

